# calculsurGPU

Lab1-Sources/: CMakeLists.txt
Lab1-Sources/Common/: cl.hpp  device_picker.hpp  err_code.h  wtime.c
Lab1-Sources/Exercise01/: CMakeLists.txt  DeviceInfo.cpp
Lab1-Sources/Exercise02/: CMakeLists.txt  vadd.cl  vadd.cpp
Lab1-Sources/Exercise03/: CMakeLists.txt  vadd.cpp  vaddBis.cl
Lab1-Sources/Exercise04/: CMakeLists.txt  matmul.cpp  matmul.hpp  matrix_lib.cpp  matrix_lib.hpp
Lab1-Sources/Exercise05/: CMakeLists.txt  pi.cpp
